# AoC2022

./: Cargo.toml  README.md  run.sh
01/01/: program.jq
01/02/: program.jq
02/01/: program.jq
02/02/: program.jq
03/01/: program.jq
03/02/: program.jq
04/01/: program.jq
04/02/: program.jq
05/01/: program.jq
05/02/: program.jq
06/01/: program.jq
06/02/: program.jq
07/01/: program.jq
07/02/: program.jq
08/01/: program.jq
08/02/: program.jq
09/01/: program.jq
09/02/: program.jq
10/01/: program.jq
10/02/: program.jq
11/01/: program.jq
11/02/: program.jq
12/: README.md
12/01/: program.jq
13/01/: program.jq
13/02/: program.jq
14/01/: program.jq
14/02/: program.jq
15/01/: program.jq
15/02/: program.jq
16/01/: program.jq
16/02/: program.jq
17/01/: program.jq
17/02/: program.jq
18/01/: program.jq
18/02/: program.jq
19/01/: program.jq  program.rs
19/02/: program.jq  program.rs
20/01/: program.jq
20/02/: program.jq
21/01/: program.jq
21/02/: program.jq
22/01/: program.jq
22/02/: program.jq
23/01/: program.jq
23/02/: program.jq
24/01/: program.jq  program.rs
24/02/: program.rs
25/: program.jq
